Moved Files.java in correct package